# LevelUp

./: README.md  config.py  main.py  pyproject.toml  screener.duckdb  test_fetch.py  test_filters.py  test_technical.py
data/: db.py  fetcher.py
indicators/: technical.py
screener/: filters.py
static/css/: style.css
static/js/: export.js  sort.js
templates/: base.html  chart.html  dashboard.html
templates/partials/: results_table.html
