[project]
name = "levelup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.3",
    "fastapi[standard]>=0.136.3",
    "pandas-ta>=0.4.71b0",
    "yfinance>=1.4.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]
